--- a/src/app/shared/invite-popup/invite-popup.component.html
+++ b/src/app/shared/invite-popup/invite-popup.component.html
@@ -1,4 +1,4 @@
-
+<div class="close"><i (click)="onNoClick()" class="material-icons">  close </i></div>
 <div class="invite-users-modal-component">
     <div class="invite-users-modal-content">
         <div class="invite-users-title-wrapper">
