--- a/src/app/layout/master/master.component.scss
+++ b/src/app/layout/master/master.component.scss
@@ -129,30 +129,43 @@
 
 .account {
   font-family: 'Roboto', helvetica, arial, sans-serif;
-  width: 270px;
-  padding: 15px 15px;
+  width: 240px;
+  padding: 15px 10px;
   position: absolute;
   left: 100px;
   top: 100px;
   z-index: 2;
+  border-radius: 4px;
   box-shadow: 0 4px 17px 6px rgba(0, 0, 0, 0.1);
-  a {
-    margin-bottom: 20px;
+  p{
+    color: #9699a6;
+    padding-left: 16px;
+    margin-top: 7px;
+    margin-bottom: 7px;
+  }
+  .ac-menu {
+    margin-bottom: 0px;
+    padding: 0px 0px 0px 12px;
+    border-radius: 4px;
+    &:hover {
+      color: #ffffff;
+      background-color: #009AFF;
+    }
   }
   i {
     float: left;
     color: #333333;
     cursor: pointer;
-    line-height: 2;
+    line-height: 3;
   }
   .text {
-    margin-left: 10px;
-    margin-top: 3px;
+    margin-left: 12px;
+    margin-top: 0px;
     float: left;
     font-size: 16px;
     cursor: pointer;
     color: #333333;
     font-weight: 400;
-    line-height: 2;
+    line-height: 3;
   }
 }
