--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   clear: both;
   display: block;
 }
+i {
+  cursor: pointer;
+}
