--- a/src/app/components/dashboard/integration.component.html
+++ b/src/app/components/dashboard/integration.component.html
@@ -2,7 +2,22 @@
 
 <mat-tab-group animationDuration="0ms">
   <mat-tab label="Automation Center"><mat-drawer-container class="example-container">
-        <mat-drawer mode="side" opened>hello</mat-drawer>
+      <mat-drawer mode="side" opened>
+          <mat-list>
+          <mat-list-item> Category </mat-list-item>
+          </mat-list>
+        <mat-action-list>
+           
+
+          <button mat-list-item > Explore By App </button>
+          <button mat-list-item > Featured </button>
+          <button mat-list-item > Communication </button>
+          <button mat-list-item > Customer Support </button>
+          <button mat-list-item > Marketing </button>
+          <button mat-list-item > E-Commerce </button>
+        </mat-action-list>
+        
+      </mat-drawer>
 
         <mat-drawer-content>Main content</mat-drawer-content>
       </mat-drawer-container></mat-tab>
