--- a/src/app/layout/master/master.component.html
+++ b/src/app/layout/master/master.component.html
@@ -1,4 +1,4 @@
-<div class="main-div  clearfix">
+<!-- <div class="main-div  clearfix">
         <p>Logo</p>
         <div class="box" (click)="profileBox=!profileBox">
          <span>BS</span>
@@ -91,7 +91,7 @@
                     </span></a>
       </div>
     
-</div>
+</div> -->
 
 
 <router-outlet></router-outlet>
