--- a/src/app/components/dashboard/board.component.html
+++ b/src/app/components/dashboard/board.component.html
@@ -1,1 +1,48 @@
-<h2>Who is on board</h2>
+<div class="boardcontent">
+                <i class="material-icons">
+                                add_circle
+                                </i>
+        <h2>Add team members</h2>
+                </div>
+        <mat-form-field>
+                <input matInput placeholder="Enter name or email">
+              </mat-form-field>
+              <mat-list>
+                        <mat-list-item> Team Subscriber list </mat-list-item>
+
+              </mat-list>
+              
+             
+                        <mat-action-list>
+                                 <div class="subscriberlist">
+                                                <button mat-mini-fab>AB</button>
+                                        <button mat-list-item > ABC </button>
+                                        <i class="material-icons" >
+                                                        add_circle
+                                                        </i>
+                                                        <i class="material-icons" >
+                                                                        add_circle
+                                                                        </i>
+                                  </div>
+                                  <div class="subscriberlist">
+                                                <button mat-mini-fab>XY</button>
+                                                <button mat-list-item > XYZ </button>
+                                                <i class="material-icons" >
+                                                                add_circle
+                                                                </i>
+                                                                <i class="material-icons" >
+                                                                                add_circle
+                                                                                </i>
+
+                                  </div>
+                                       
+                                     </mat-action-list>
+                                     
+                                                  
+                                                                   
+                                                
+                      
+              
+             
+
+    
