--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -66,7 +66,7 @@
                   matTooltip="Integrations"
                   aria-label="Button that displays a tooltip when focused or hovered over">
                   <div class="shape1">
-                      <button mat-button (click)="openDialoge()">
+                      <button mat-button (click)="openIntegration()">
                       <i class="material-icons ">
                           highlight
                           </i>/0
@@ -88,7 +88,7 @@
                   matTooltip="Automations"
                   aria-label="Button that displays a tooltip when focused or hovered over">
                  <div class="shape1">
-                    <button mat-button (click)="openDialogee()">
+                    <button mat-button (click)="openAutomation()">
                     <i class="material-icons">
                         nfc
                         </i> /1
@@ -110,7 +110,7 @@
                 aria-label="Button that displays a tooltip when focused or hovered over">
               
                <div class="shape3">
-                  <button mat-button (click)="openDialogue()">
+                  <button mat-button (click)="openBoard()">
                   <i class="material-icons person">
                       supervisor_account
                       </i> / 0
@@ -124,7 +124,7 @@
                 matTooltip="See rescent board activity"
                 aria-label="Button that displays a tooltip when focused or hovered over">
                <div class="activity2">
-                  <button mat-button (click)="openDialog()">
+                  <button mat-button (click)="_toggleSidebar()">
                   Activities /0
                   </button>
 
@@ -169,12 +169,43 @@
   
 <ng-sidebar-container>
   <ng-sidebar [(opened)]="_opened" position="right" contentClass="abc">
-    <p>Sidebar contents</p>
+    <div class="sidemargin">
+        <h2>ATM Log</h2>
+        <mat-tab-group animationDuration="0ms">
+            <mat-tab label="activity"> 
+              <div class="filterlogbutton">
+                  <button mat-flat-button class="filterlog" color="primary" (click)="notificationBox=!notificationBox" >Primary <i class="material-icons"  >
+                      keyboard_arrow_down
+                      
+                      </i></button>
+                    </div>
+                      <div class="notification-box"  *ngIf="notificationBox">
+                        <div class="logtopbar">
+                            <p>Filter Log Showing 32 Activities</p>
+
+                        </div>
+                         
+                          </div>
+    
+              
+              
+              
+            </mat-tab>
+    
+            <mat-tab label="Updates">Content 2</mat-tab>
+          
+          </mat-tab-group>
+          
+
+    </div>
+    
+      
+      
   </ng-sidebar>
 
   <div ng-sidebar-content>
         <div class="example-container mat-elevation-z8">
-                <table mat-table [dataSource]="dataSource">
+                <table mat-table [dataSource]="dataSource"> -->
               
                   <!-- Name Column -->
                   <ng-container matColumnDef="name" sticky>
@@ -189,7 +220,7 @@
                   </ng-container>
               
                   <!-- Weight Column -->
-                  <ng-container matColumnDef="weight">
+                   <ng-container matColumnDef="weight">
                     <th mat-header-cell *matHeaderCellDef> Weight </th>
                     <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
                   </ng-container>
@@ -212,7 +243,7 @@
                   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
               </div>
-    <!-- <button (click)="_toggleSidebar()">Toggle sidebar</button> -->
-  </div>
+    <button (click)="_toggleSidebar()">Toggle sidebar</button>
+   </div> 
 
 </ng-sidebar-container>
