--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   clear: both;
   display: block;
 }
+.ng-sidebar--right {
+  background-color:white;
+  box-shadow: 3px 3px 6px grey;
+}
