--- a/src/app/layout/master/master.component.html
+++ b/src/app/layout/master/master.component.html
@@ -10,42 +10,12 @@
               <i class="far fa-user"></i> 
               <span class="text">My profile
               </span></a></div>
-      
-              <div class="ac-menu">
-              <a class="clearfix" href="http://">
-                <i class="far fa-save"></i>
-                <span class="text">Import data
-                </span></a></div>
-      
-                <div class="ac-menu">
-                <a class="clearfix" href="http://">
-                  <i class="far fa-object-ungroup"></i>
-                  <span class="text">Integration
-                  </span></a></div>
-      
-                  <div class="ac-menu">
-                  <a class="clearfix" href="http://">
-                    <i class="far fa-trash-alt"></i>
-                    <span class="text">Recycle bin
-                    </span></a></div>
-      
-                    <div class="ac-menu">
-                    <a class="clearfix" href="http://">
-                      <i class="far fa-folder"></i>
-                      <span class="text">Archived boards
-                     </span></a> </div>
-      
-                     <div class="ac-menu">
+
+                     <div class="ac-menu" (click)="openDialog()">
                      <a class="clearfix" href="http://">
-                      <i class="far fa-sun"></i>
-                      <span class="text">Admin
+                      <i class="fas fa-plus"></i>
+                      <span class="text">Invite Member
                       </span></a></div>
-      
-                      <div class="ac-menu">
-                      <a class="clearfix" href="http://">
-                        <i class="far fa-user"></i>
-                        <span class="text">Team
-                        </span></a></div>
       
                         <div class="ac-menu">
                         <a class="clearfix" href="http://">
@@ -97,7 +67,7 @@
     </div>
 
     
-</div> -->
+</div> 
 
 
 
